--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.10.1"
+    "react-icons": "^4.10.1",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
