--- a/package.json
+++ b/package.json
@@ -12,15 +12,25 @@
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@react-google-maps/api": "^2.19.3",
     "framer-motion": "^11.2.10",
+    "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "next": "14.2.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "nookies": "^2.5.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-google-charts": "^4.0.1",
+    "react-hook-form": "^7.52.0",
     "react-icons": "^4.10.1",
+    "react-leaflet": "^4.2.1",
+    "react-toastify": "^10.0.5",
     "swr": "^2.2.5"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
