--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@hookform/error-message": "^2.0.1",
     "@react-google-maps/api": "^2.19.3",
     "framer-motion": "^11.2.10",
     "leaflet": "^1.9.4",
@@ -27,6 +28,7 @@
     "react-icons": "^4.10.1",
     "react-leaflet": "^4.2.1",
     "react-toastify": "^10.0.5",
+    "recharts": "^2.12.7",
     "swr": "^2.2.5"
   },
   "devDependencies": {
